# MGM

./: cog.yaml  pyproject.toml
mgm/train/: train.py
scripts/gemma/train/: stage_1_2_full_gemma_v2b_336_hr_768.sh
