[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mgm"
version = "1.0.0"
description = "Mini-Gemini: Mining the Potential of Multi-modality Vision Language Models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tokenizer", "paddleocr>=2.0.1", "transformers==4.44.2"
    "flash-attn", "diffusers==0.26.3" 
    "deepspeed",""open_clip_torch", "ninja"  
    "torch==2.4","sentencepiece==0.1.99", "shortuuid",
    "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16",
]

[project.optional-dependencies]
train = ["deepspeed==0.11.1", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/dvlab-research/MGM"
"Bug Tracker" = "https://github.com/dvlab-research/MGM/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "model_zoo*", "work_dirs*", "project*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "model_zoo*", "work_dirs*", "project*"]
